tests/paczka1/fuzzy1/82949050.err
Error in line 1: uQRH S976 28,1
Error in line 17: TL1i1MZ5QIp S201 9,0
Error in line 19: TL1i1MZ5QIp S976 95,3
Error in line 21: w9Lu7WnCdR S201 89,8
Error in line 26: uQRH S321 16,2
